Adicionando o git no site

--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -118,7 +118,7 @@
 	
 <footer	id="rodape">
 <p>Copyright &copy; 2020 - by Fiama Santos <br/>
-	<a href="http://facebook.com/profile.php?id=100016262232152"target="blank">Facebook </a>| Linkedin</P>
+<a href="https://github.com/FiamaBrenda""target="blank"> github </a>| Linkedin</P>
 </footer>
 </div>
 </body>
