--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </aside>
 <footer	id="rodape">
 <p>Copyright &copy; 2020 - by Fiama Santos <br/>
-<a href="http://facebook.com/profile.php?id=100016262232152"target="blank">Facebook </a>| <a href="http://linkedin.com/in/fiama-brenda-santos-185437199">Linkedin</a></P>
+<a href="https://github.com/FiamaBrenda""target="blank"> github </a>| <a href="http://linkedin.com/in/fiama-brenda-santos-185437199">Linkedin</a></P>
 </footer>
 </div>
 </body>
