--- a/specs.html
+++ b/specs.html
@@ -55,7 +55,7 @@
 
 <footer	id="rodape">
 <p>Copyright &copy; 2020 - by Fiama Santos <br/></P>
-<p><a href="http://facebook.com/profile.php?id=100016262232152"target="blank">Facebook </a>| Linkedin</P>
+<p><a href="https://github.com/FiamaBrenda""target="blank"> github </a>| <a href="http://linkedin.com/in/fiama-brenda-santos-185437199">Linkedin</a></p>
 </footer>
 </div>
 </body>
