--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 
 <div id="outro">
-	<video id="filme" controls="controls" poster="_imagens/video-mini02.jpg">
+	<video width="350" id="filme" controls="controls" poster="_imagens/video-mini02.jpg">
 		<source src="_media/how-it-feels.mp4" type="video/mp4"/>
 		Desculpe, mas não foi possível carregar o vídeo.
 	</video>
