--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 ﻿<!DOCTYPE html> 
-
 <html lang="pt-br">
 <head>
 	<meta charset="UFT-8"/>
 	<title>Tudo sobre Google Glass </title>
 	<link rel="stylesheet" href="_css\estilo.css"/>
 </head> 
-< script   language = " javascript " src = " javascript / funcoes.js " ></script>
+<script src="_javascript/funcoes.js"></script>
 <body>
 <div id="interface">
 	<header id="cabecalho">
