--- a/multimidia.html
+++ b/multimidia.html
@@ -53,7 +53,7 @@
 
 <footer	id="rodape">
 <p>Copyright &copy; 2020 - by Fiama Santos <br/>
-<a href="https://github.com/FiamaBrenda""target="blank"> github </a>| Linkedin</P>
+<a href="https://github.com/FiamaBrenda""target="blank"> github </a>|<a href="http://linkedin.com/in/fiama-brenda-santos-185437199">Linkedin</a></P>
 </footer>
 </div>
 </body>
