--- a/multimidia.html
+++ b/multimidia.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="_css\media.css"/>
 	
 </head> 
-<script src="_javascript/funcoes.js"></script>
+<script src="javascript/funcoes.js"></script>
 <body>
 <div id="interface">
 	<header id="cabecalho">
