--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -5,7 +5,7 @@
 	<title>Tudo sobre Google Glass </title>
 	<link rel="stylesheet" href="_css\estilo.css"/>
 	<link rel="stylesheet" href="_css\form.css"/>
-	<script src="_javascript/funcoes.js"></script>
+	<script src="javascript/funcoes.js"></script>
 	<script>
 		function calc_total(){
 			var qtd = parseInt(document.getElementById('cQtd').value);
