--- a/fotos.html
+++ b/fotos.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="_css\estilo.css"/>
 	<link rel="stylesheet" href="_css\fotos.css"/>
 </head> 
-<script src="_javascript/funcoes.js"></script>
+<script src="javascript/funcoes.js"></script>
 <body>
 <div id="interface">
 	<header id="cabecalho">
