--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Tudo sobre Google Glass </title>
 	<link rel="stylesheet" href="_css\estilo.css"/>
 </head> 
-<script src="_javascript/funcoes.js"></script>
+<script src="javascript/funcoes.js"></script>
 <body>
 <div id="interface">
 	<header id="cabecalho">
