--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UFT-8"/>
 	<title>Tudo sobre Google Glass </title>
-	<link rel="stylesheet" href="_css\estilo.css"/>
-	<link rel="stylesheet" href="_css\form.css"/>
+	<link rel="stylesheet" href="css\estilo.css"/>
+	<link rel="stylesheet" href="css\form.css"/>
 	<script src="javascript/funcoes.js"></script>
 	<script>
 		function calc_total(){
@@ -22,15 +22,15 @@
 	<h2>A revolução do Google está chegando</h2>
 	</hgroup>
 	
-		<img id="icone" src="_imagens\contato.png">
+		<img id="icone" src="imagens\contato.png">
 		<nav id="menu">
 			<h1>Menu Principal</h1>
 			<ul>
-				<li onmousemove="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html">Home</a></li>
-				<li onmousemove="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="specs.html">Especificações</a></li>
-				<li onmousemove="mudaFoto('_imagens/fotos.png')" onmouseout=	"mudaFoto('_imagens/contato.png')"><a href="fotos.html">Fotos</a></li>
-				<li onmousemove="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="multimidia.html">Multimídia</a></li>
-				<li onmousemove="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+				<li onmousemove="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/contato.png')"><a href="index.html">Home</a></li>
+				<li onmousemove="mudaFoto('imagens/especificacoes.png')" onmouseout="mudaFoto('imagens/contato.png')"><a href="specs.html">Especificações</a></li>
+				<li onmousemove="mudaFoto('imagens/fotos.png')" onmouseout=	"mudaFoto('imagens/contato.png')"><a href="fotos.html">Fotos</a></li>
+				<li onmousemove="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/contato.png')"><a href="multimidia.html">Multimídia</a></li>
+				<li onmousemove="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/contato.png')"><a href="fale-conosco.html">Fale conosco</a></li>
 			</ul>
 		</nav>
 	</header>
