--- a/multimidia.html
+++ b/multimidia.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UFT-8"/>
 	<title>Tudo sobre Google Glass </title>
-	<link rel="stylesheet" href="_css\estilo.css"/>
-	<link rel="stylesheet" href="_css\media.css"/>
+	<link rel="stylesheet" href="css\estilo.css"/>
+	<link rel="stylesheet" href="css\media.css"/>
 	
 </head> 
 <script src="javascript/funcoes.js"></script>
@@ -16,15 +16,15 @@
 	<h2>A revolução do Google está chegando</h2>
 	</hgroup>
 	
-		<img id="icone" src="_imagens\multimidia.png">
+		<img id="icone" src="imagens\multimidia.png">
 		<nav id="menu">
 			<h1>Menu Principal</h1>
 			<ul>
-				<li onmousemove="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="index.html">Home</a></li>
-				<li onmousemove="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="specs.html">Especificações</a></li>
-				<li onmousemove="mudaFoto('_imagens/fotos.png')" onmouseout=	"mudaFoto('_imagens/multimidia.png')"><a href="fotos.html">Fotos</a></li>
-				<li onmousemove="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="multimidia.html">Multimídia</a></li>
-				<li onmousemove="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+				<li onmousemove="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="index.html">Home</a></li>
+				<li onmousemove="mudaFoto('imagens/especificacoes.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="specs.html">Especificações</a></li>
+				<li onmousemove="mudaFoto('imagens/fotos.png')" onmouseout=	"mudaFoto('imagens/multimidia.png')"><a href="fotos.html">Fotos</a></li>
+				<li onmousemove="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="multimidia.html">Multimídia</a></li>
+				<li onmousemove="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="fale-conosco.html">Fale conosco</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -40,11 +40,11 @@
 			</header>
 				<div id="tv-radio">
 					<audio id="musica" controls="controls">
-						<source src="_media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg"/>
+						<source src="media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg"/>
 						Desculpe, mas não foi possível carregar o vídeo.
 					</audio>
-					<video id="filme" controls="controls" poster="_imagens/video-mini03.jpg">
-						<source src="_media/getting-started.mp4" type="video/mp4"/>
+					<video id="filme" controls="controls" poster="imagens/video-mini03.jpg">
+						<source src="media/getting-started.mp4" type="video/mp4"/>
 						Desculpe, mas não foi possível carregar o vídeo.
 					</video>
 				</div>
