alt comando onmouse

--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -111,7 +111,7 @@
     <p> <label for="cPtt"> Preço Total: R$ </label><input type="text" name="tPtt" id="cPtt" readonly placeholder="Total a pagar"/></p>
 </fieldset>
 
-<input type="image" name="tEnv" src="_imagens/botao-enviar.png"/>
+<input type="image" name="tEnv" src="imagens/botao-enviar.png"/>
 </form>
 	</article>
 </section>
