--- a/specs.html
+++ b/specs.html
@@ -18,12 +18,12 @@
 		<img id="icone" src="imagens\especificacoes.png">
 		<nav id="menu">
 			<h1>Menu Principal</h1>
-			<ul>
-				< Li  onmouseover = " mudaFoto ( 'casa') " > < a  href =" index.html " > Início < a > </ li >
-				< Li  onmouseover = " mudaFoto ( 'especificacoes') " > < a  href =" specs.html " > Especificações </ a > </ li >
-				< Li  onmouseover = " mudaFoto ( 'fotos') " > < a  href =" fotos.html " > Fotos </ a > </ li >
-				< Li  onmouseover = " mudaFoto ( 'multimídia') " > < a  href =" multimidia.html " > Multimídia </ a > </ li >
-				< Li  onmouseover = " mudaFoto ( 'Contato') " > < a  href =" fale-conosco.html " > Fale Conosco </ a > </ li >
+			<ul>				
+				<li  onmouseover = " mudaFoto ( 'home') " > <a  href =" index.html " > Home <a > </li >
+				<Li  onmouseover = " mudaFoto ( 'especificacoes') " > <a  href =" specs.html " > Especificações </a > </li >
+				<Li  onmouseover = " mudaFoto ( 'fotos') " > <a  href =" fotos.html " > Fotos </a > </li >
+				<Li  onmouseover = " mudaFoto ( 'multimídia') " > <a  href =" multimidia.html " > Multimídia </a > </li >
+				<Li  onmouseover = " mudaFoto ( 'Contato') " > <a  href =" fale-conosco.html " > Fale Conosco </a> </li >
 			</ul>
 		</nav>
 	</header>
