--- a/google-glass.html
+++ b/google-glass.html
@@ -56,7 +56,7 @@
 		<h1>Câmera</h1>
 		<h2>Filme e fotografe a qualquer momento</h2>
 	</header>
-<img src="_imagens/det-camera.jpg" class="img-dir" alt="Câmera do Google Glass"/>
+<img src="imagens/det-camera.jpg" class="img-dir" alt="Câmera do Google Glass"/>
 <p>Com o Google Glass será possível tirar fotos com até 5 megapixels e gravar vídeos com 720 linhas de resolução. Os primeiros vídeos e fotos capturados com o aparelho já começaram a circular pela rede, mas até agora ninguém tem muitas informações técnicas.</p></article>
 
 <article id="sensores">
