--- a/google-glass.html
+++ b/google-glass.html
@@ -48,7 +48,7 @@
 		<h2>Como o mundo vai aparecer</h2>
 	</header>
 <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça.</p>
-<img src="imagens/det-tela.jpg" alt="Tela do google glass"/>
+<img src="imagens/det-tela.jpg" class="img-dir" alt="Tela do google glass"/>
 </article>
 
 <article id="camera">
@@ -65,7 +65,7 @@
 		<h2>A sensibilidade de um simples óculos</h2>
 	</header>
 <p>Quem pensa que para comandar o Google Glass vai precisar de teclado e mouse, se engana redondamente. O dispositivo vem com vários tipos de sensores e microfones embutidos. Assim, para dar um comando, basta falar ou passar o dedo na lateral do óculos.</p>
-<img src="imagens/det-touch.jpg" alt=" Sensores Google Glass"/></article>
+<img src="imagens/det-touch.jpg" class="img-dir" alt=" Sensores Google Glass"/></article>
 
 <article id="gadgets">
 	<header>
